--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
 		<nav class="navbar row">
 			<div class="navbar-header">
-				<a class="navbar-brand" href="index.html"><img src="img/agence-la-panthere-monochrome.jpg" alt="lyon web design logo agence web meilleure agence" height="40" width="190"/></a>
+				<a class="navbar-brand" href="index.html"><img src="img/agence-la-panthere-monochrome.webp" alt="lyon web design logo agence web meilleure agence" height="40" width="190"/></a>
 				<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 					<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 				</button>
@@ -78,7 +78,7 @@
 	<div class="container bloc-lg">
 		<div class="row tight-width-whitespace">
 			<div class="col-sm-12">
-				<img src="img/logo.png" class="center-block image-resize-mode" width="100" height="100" alt="Agence La Panthère, entreprise web design Lyon, création logo Lyon" />
+				<img src="img/logo.webp" class="center-block image-resize-mode" width="100" height="100" alt="Agence La Panthère, entreprise web design Lyon, création logo Lyon" />
 				<h1 class="text-center hero-bloc-text tc-white ">
 					Agence La Panthère
 				</h1>
