--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="keywords" content="entreprise web design Lyon, agence web design Lyon, agence ux Lyon, agence web Lyon, agence ux design lyon, création site internet lyon">
     <meta name="description" content="La Panthère est une agence de web design basé à Lyon qui aide les entreprises à devenir attractives et visibles sur Internet.">
+	<meta http-equiv="Cache-control" content="public">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 	<!--Balise google search Console-->
 	<meta name="google-site-verification" content="sTJwP2OtI5sEktUXDQlLhrROJHke2xGmUeBsS6A8Ifk" />
@@ -13,7 +14,7 @@
 	<link rel="canonical" href="https://chascd.github.io/lapanthere/">
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
     
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
+	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="style.min.css">
 	<link rel="stylesheet" type="text/css" href="./css/font-awesome-min.css">
 	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
