--- a/index.html
+++ b/index.html
@@ -23,6 +23,15 @@
 
     
 <!-- Analytics -->
+ <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-XMR8XRLTVP"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-XMR8XRLTVP');
+</script>
 <!-- Analytics END -->
     
 </head>
