--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<link rel="canonical" href="https://chascd.github.io/lapanthere/">
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
     
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="style.min.css">
 	<link rel="stylesheet" type="text/css" href="./css/font-awesome-min.css">
 	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
@@ -241,22 +241,26 @@
 				<div class="row row-no-gutters social">
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-twitter icon-md"></span></a>
+							<a class="social" aria-label="Lien vers Twitter" href="https://twitter.com/?lang=fr">
+								<i class="fa fa-twitter icon-md"></i>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-facebook icon-md"></span></a>
+							<a class="social" aria-label="Lien vers Facebook" href="https://www.facebook.com/">
+								<i class="fa fa-facebook icon-md"></i>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-dribbble icon-md"></span></a>
+							<a class="social" aria-label="Lien vers Dribble" href="https://dribbble.com/">
+								<i class="fa fa-dribbble icon-md"></i>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-instagram icon-md"></span></a>
+							<a class="social" aria-label="Lien vers Instagram" href="https://www.instagram.com/?hl=fr">
+								<i class="fa fa-instagram icon-md"></i>
 						</div>
 					</div>
 				</div>
@@ -272,7 +276,7 @@
 
 <script src="./js/jquery-2.1.0.min.js"></script>
 <script src="./js/bootstrap.min.js"></script>
-<script src="./js/blocs.js"></script>
+<script src="./js/blocs.min.js"></script>
 <script src="./js/jquery.touchSwipe.min.js" defer></script>
 <script src="./js/gmaps.min.js"></script>
 
