--- a/index.html
+++ b/index.html
@@ -14,10 +14,12 @@
 	<link rel="canonical" href="https://chascd.github.io/lapanthere/">
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
     
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
+	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="style.min.css">
 	<link rel="stylesheet" type="text/css" href="./css/font-awesome-min.css">
-	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
+	<link rel="stylesheet" type="text/css" href="./css/et-line.min.css">
+	
+    
 	
     <title>Entreprise web design Lyon</title>
 
@@ -173,7 +175,7 @@
 		</div>
 		<div class="row tight-width-whitespace portfolio-row">
 			<div class="col-sm-6">
-				<a href="#" data-lightbox="img/1.webp" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img src="img/1.jpg" alt="entreprise web design Lyon logo agence web meilleure agence et refonte site web journal" class="img-responsive portfolio-thumb" width="350" height="350" /></a>
+				<a href="#" data-lightbox="img/1.webp" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img src="img/1.webp" alt="entreprise web design Lyon logo agence web meilleure agence et refonte site web journal" class="img-responsive portfolio-thumb" width="350" height="350" /></a>
 				<h3 class="mg-md text-center">
 					Refonte d'un site web pour un journal local
 				</h3>
@@ -182,7 +184,7 @@
 				</p>
 			</div>
 			<div class="col-sm-6">
-				<a href="#" data-lightbox="img/2.webp" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img src="img/2.jpg" class="img-responsive portfolio-thumb" alt="entreprise web design Lyon logo agence web meilleure agence, Création d'un site web pour photographes" width="350" height="350" /></a>
+				<a href="#" data-lightbox="img/2.webp" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img src="img/2.webp" class="img-responsive portfolio-thumb" alt="entreprise web design Lyon logo agence web meilleure agence, Création d'un site web pour photographes" width="350" height="350" /></a>
 				<h3 class="mg-md text-center">
 					Création d'un site web pour photographes
 				</h3>
@@ -241,26 +243,22 @@
 				<div class="row row-no-gutters social">
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" aria-label="Lien vers Twitter" href="https://twitter.com/?lang=fr">
-								<i class="fa fa-twitter icon-md"></i>
+							<a class="social" href="index.html"><span class="fa fa-twitter icon-md"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" aria-label="Lien vers Facebook" href="https://www.facebook.com/">
-								<i class="fa fa-facebook icon-md"></i>
+							<a class="social" href="index.html"><span class="fa fa-facebook icon-md"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" aria-label="Lien vers Dribble" href="https://dribbble.com/">
-								<i class="fa fa-dribbble icon-md"></i>
+							<a class="social" href="index.html"><span class="fa fa-dribbble icon-md"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" aria-label="Lien vers Instagram" href="https://www.instagram.com/?hl=fr">
-								<i class="fa fa-instagram icon-md"></i>
+							<a class="social" href="index.html"><span class="fa fa-instagram icon-md"></span></a>
 						</div>
 					</div>
 				</div>
@@ -273,7 +271,6 @@
 
 </div>
 <!-- Principal conteneur END -->
-
 <script src="./js/jquery-2.1.0.min.js"></script>
 <script src="./js/bootstrap.min.js"></script>
 <script src="./js/blocs.min.js"></script>
