--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
 	<link rel="stylesheet" type="text/css" href="./css/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="./css/et-line.min.css">
 	
-    <title>page2</title>
+    <title>Contact Entreprise webdesign Lyon</title>
 
     
 <!-- Analytics -->
@@ -50,7 +50,7 @@
 					<li>
 					</li>
 					<li>
-						<a href="page2.html">page2 &gt;</a>
+						<a href="contact.html">Contactez nous !</a>
 					</li>
 				</ul>
 			</div>
