--- a/index.html
+++ b/index.html
@@ -100,14 +100,14 @@
 		<div class="row voffset-lg med-width-whitespace">
 			<div class="col-sm-4">
 				<div class="text-center">
-					<span class="et-icon-browser sm-shadow icon-dark-slate-blue icons icon-lg"></span>
+					<span class="et-icon-browser et-8x sm-shadow icon-dark-slate-blue icons icon-lg"></span>
 				</div>
 				<h3 class="mg-md text-center">
 					Web design
 				</h3>
-				<p class="text-center ">
+				<h5 class="text-center ">
 					Que vous ayez un site web qui a besoin d'un rafraîchissement ou que vous partiez de zéro, laissez-nous vous réaliser un design dont vous serez fier.
-				</p>
+				</h5>
 			</div>
 			<div class="col-sm-4">
 				<div class="text-center">
@@ -116,9 +116,9 @@
 				<h3 class="mg-md text-center">
 					Stratégie
 				</h3>
-				<p class="text-center ">
+				<h5 class="text-center ">
 					Plutôt que de suggérer des designs à la mode, nous travaillerons avec vous pour comprendre vos objectifs commerciaux afin de vous proposer le meilleur design possible.<br>
-				</p>
+				</h5>
 			</div>
 			<div class="col-sm-4">
 				<div class="text-center">
@@ -127,9 +127,9 @@
 				<h3 class="mg-md text-center">
 					Illustrations
 				</h3>
-				<p class="text-center ">
+				<h5 class="text-center ">
 					Un bon design n'est rien sans de bonnes illustrations. Laissez faire notre équipe de graphistes talentueux pour donner à vos pages une touche finale d'élégance.
-				</p>
+				</h5>
 			</div>
 		</div>
 		<div class="row voffset-lg voffset">
@@ -154,9 +154,9 @@
 				<h2 class="mg-md text-center tc-white">
 					Nous souhaitons aider les entreprises de la région Lyonnaise à se développer et à connaître le succès. Nous travaillons pour aider les entreprises locales à attirer de nouveaux clients .<br>
 				</h2>
-				<p class="text-center white">
-					Nous aimons collaborer avec des entrepreneurs créatifs et des entreprises locale, qu’elles aient besoin de créer un site de A à Z ou de donner un coup de jeune à leur site. Que vous ayez besoin d’une identité visuelle complète ou d’une refonte de votre site, n’hésitez pas à nous contacter. Nous travaillerons ensemble pour créer des sites beau et bien structurés, qui seront facilement trouvable sur les moteurs de recherche. <br><br><a class="ltc-white bold-link" href="page2.html">Contactez notre équipe</a><br>
-				</p>
+				<h5 class="text-center white">
+					Nous aimons collaborer avec des entrepreneurs créatifs et des entreprises locale, qu’elles aient besoin de créer un site de A à Z ou de donner un coup de jeune à leur site. Que vous ayez besoin d’une identité visuelle complète ou d’une refonte de votre site, n’hésitez pas à nous contacter. Nous travaillerons ensemble pour créer des sites beau et bien structurés, qui seront facilement trouvable sur les moteurs de recherche. <br><br><a class="ltc-white bold-link" href="contact.html">Contactez notre équipe !</a><br>
+				</h5>
 			</div>
 		</div>
 	</div>
@@ -175,42 +175,42 @@
 		</div>
 		<div class="row tight-width-whitespace portfolio-row">
 			<div class="col-sm-6">
-				<a href="#" data-lightbox="img/1.webp" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img src="img/1.jpg" alt="entreprise web design Lyon logo agence web meilleure agence et refonte site web journal" class="img-responsive portfolio-thumb" width="350" height="350" /></a>
+				<a href="#" data-lightbox="img/1.jpg" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img src="img/1.jpg" alt="entreprise web design Lyon logo agence web meilleure agence et refonte site web journal" class="img-responsive portfolio-thumb" width="350" height="350" /></a>
 				<h3 class="mg-md text-center">
 					Refonte d'un site web pour un journal local
 				</h3>
-				<p class="text-center">
+				<h5 class="text-center">
 					Nous avons créé une nouvelle identité visuelle pour un journal lyonnais.
-				</p>
+				</h5>
 			</div>
 			<div class="col-sm-6">
-				<a href="#" data-lightbox="img/2.webp" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img src="img/2.jpg" class="img-responsive portfolio-thumb" alt="entreprise web design Lyon logo agence web meilleure agence, Création d'un site web pour photographes" width="350" height="350" /></a>
+				<a href="#" data-lightbox="img/2.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img src="img/2.jpg" class="img-responsive portfolio-thumb" alt="entreprise web design Lyon logo agence web meilleure agence, Création d'un site web pour photographes" width="350" height="350" /></a>
 				<h3 class="mg-md text-center">
 					Création d'un site web pour photographes
 				</h3>
-				<p class="text-center">
+				<h5 class="text-center">
 					Nous avons conçu la plateforme idéale pour laisser place aux clichés des photographes.
-				</p>
+				</h5>
 			</div>
 		</div>
 		<div class="row tight-width-whitespace portfolio-row">
 			<div class="col-sm-6">
-				<a href="#" data-lightbox="img/3.bmp" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img src="img/3.jpg" class="img-responsive portfolio-thumb" alt="entreprise web design Lyon logo agence web meilleure agence, Création d'un site web pour voyageur" width="350" height="350"/></a>
+				<a href="#" data-lightbox="img/3.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img src="img/3.jpg" class="img-responsive portfolio-thumb" alt="entreprise web design Lyon logo agence web meilleure agence, Création d'un site web pour voyageur" width="350" height="350"/></a>
 				<h3 class="mg-md text-center">
 					Création d'un site internet pour un voyageur
 				</h3>
-				<p class="text-center">
+				<h5 class="text-center">
 					Nous avons élaboré un site internet et des illustrations pour sublimer les vidéos et les articles de ce voyageur.
-				</p>
+				</h5>
 			</div>
 			<div class="col-sm-6">
-				<a href="#" data-lightbox="img/4.bmp" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img src="img/4.jpg" class="img-responsive portfolio-thumb" alt="entreprise web design Lyon logo agence web meilleure agence, Création d'un site web pour agence de mariage" width="350" height="350" /></a>
+				<a href="#" data-lightbox="img/4.jpg" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img src="img/4.jpg" class="img-responsive portfolio-thumb" alt="entreprise web design Lyon logo agence web meilleure agence, Création d'un site web pour agence de mariage" width="350" height="350" /></a>
 				<h3 class="mg-md text-center">
-					Conception d'un site pour une agence de mariage
+					Conception d'un site web pour une agence de mariage
 				</h3>
-				<p class="text-center">
-					Nous avons travaillé avec cette agence pour créer un site internet permettant la présentation détaillée de leurs prestations.
-				</p>
+				<h5 class="text-center">
+					Nous avons travaillé avec cette agence basé à Lyon pour créer un site internet permettant la présentation détaillée de leurs prestations.
+				</h5>
 			</div>
 		</div>
 	</div>
@@ -237,9 +237,9 @@
 	<div class="container bloc-sm">
 		<div class="row">
 			<div class="col-sm-12">
-				<p class="text-center white">
-					Agence La Panthère - Agence web basée à Lyon.<br>
-				</p>
+				<h5 class="text-center white">
+					Agence La Panthère - Agence web basée à Lyon.
+				</h5>
 				<div class="row row-no-gutters social">
 					<div class="col-sm-3">
 						<div class="text-center">
