--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,10 @@
     <meta name="keywords" content="Entreprise web design Lyon, Contact, Agence webdesign Lyon">
     <meta name="description" content="Un projet à réaliser? N'hésitez pas à nous contacter">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-    <link rel="shortcut icon" type="image/png" href="favicon.jpg">
+	<!--Balise google search Console-->
+	<meta name="google-site-verification" content="sTJwP2OtI5sEktUXDQlLhrROJHke2xGmUeBsS6A8Ifk" />
+    
+	<link rel="shortcut icon" type="image/png" href="favicon.jpg">
     
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="style.min.css">
@@ -137,22 +140,26 @@
 				<div class="row row-no-gutters social">
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-twitter icon-md"></span></a>
+							<a class="social" aria-label="Lien vers Twitter" href="https://twitter.com/?lang=fr">
+								<i class="fa fa-twitter icon-md"></i>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-facebook icon-md"></span></a>
+							<a class="social" aria-label="Lien vers Facebook" href="https://www.facebook.com/">
+								<i class="fa fa-facebook icon-md"></i>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-dribbble icon-md"></span></a>
+							<a class="social" aria-label="Lien vers Dribble" href="https://dribbble.com/">
+								<i class="fa fa-dribbble icon-md"></i>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-instagram icon-md"></span></a>
+							<a class="social" aria-label="Lien vers Instagram" href="https://www.instagram.com/?hl=fr">
+								<i class="fa fa-instagram icon-md"></i>
 						</div>
 					</div>
 				</div>
