--- a/index.html
+++ b/index.html
@@ -243,26 +243,22 @@
 				<div class="row row-no-gutters social">
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" aria-label="Lien vers Twitter" href="https://twitter.com/?lang=fr">
-								<i class="fa fa-twitter icon-md"></i>
+							<a class="social" href="https://twitter.com/?lang=fr"><span class="fa fa-twitter icon-md"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" aria-label="Lien vers Facebook" href="https://www.facebook.com/">
-								<i class="fa fa-facebook icon-md"></i>
+							<a class="social" href="https://www.facebook.com/?react=AQC8AKrVR5nRS0KU"><span class="fa fa-facebook icon-md"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" aria-label="Lien vers Dribble" href="https://dribbble.com/">
-								<i class="fa fa-dribbble icon-md"></i>
+							<a class="social" href="https://dribbble.com/"><span class="fa fa-dribbble icon-md"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" aria-label="Lien vers Instagram" href="https://www.instagram.com/?hl=fr">
-								<i class="fa fa-instagram icon-md"></i>
+							<a class="social" href="https://www.instagram.com/?hl=fr"><span class="fa fa-instagram icon-md"></span></a>
 						</div>
 					</div>
 				</div>
