--- a/contact.html
+++ b/contact.html
@@ -106,7 +106,7 @@
 					</button>
 				</form>
 			</div>
-			<div class="col-sm-6">
+			<div class="col-sm-6 text-center">
 				<p>
 					contact@agencelapanthere.com<br>2 place Sathonay 69001 Lyon<br>Ouvert de 9h à 18h, du lundi au vendredi<br>
 				</p>
