--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 	<!--Balise google search Console-->
 	<meta name="google-site-verification" content="sTJwP2OtI5sEktUXDQlLhrROJHke2xGmUeBsS6A8Ifk" />
-    
+    <!--Balise robots-->
+	<meta name="robots" content="index,follow" />
+	<!--Balise canonical-->
+	<link rel="canonical" href="https://chascd.github.io/lapanthere/contact.html">
+
 	<link rel="shortcut icon" type="image/png" href="favicon.jpg">
     
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
