--- a/contact.html
+++ b/contact.html
@@ -91,19 +91,20 @@
 			<div class="col-sm-6">
 				<form id="form_1" novalidate success-msg="Your message has been sent." fail-msg="Sorry it seems that our mail server is not responding, Sorry for the inconvenience!">
 					<div class="form-group">
-						<label for="Nom">Nom et Prénom</label>
 						<input id="name" class="form-control" required >
+						<label for="Nom">Nom et Prénom</label>
 					</div>
 					<div class="form-group">
-						<label for="Adresse email">Adresse Mail</label>
 						<input id="email" class="form-control" type="email" required >
+						<label for="Adresse email">Adresse Mail</label>
 					</div>
 					<div class="form-group">
-						<label for="Comment avez vous connu notre site ?">Comment avez vous connu notre site ?</label>
 						<input class="form-control" type="email" required id="input_504" >
+						<label for="Comment avez vous connu notre site ?">Comment avez vous connu notre site ?</label>
 					</div>
 					<div class="form-group">
-						<label for="Brief de votre projet (Ajoutez autant de détails que nécessaire)">Brief de votre projet (Ajoutez autant de détails que nécessaire)</label><br><textarea id="message" class="form-control" rows="4" cols="50" required></textarea>
+						<textarea id="message" class="form-control" rows="4" cols="50" required></textarea>
+						<label for="Brief de votre projet (Ajoutez autant de détails que nécessaire)">Brief de votre projet (Ajoutez autant de détails que nécessaire)</label>
 					</div> 
 					<button class="bloc-button btn btn-lg btn-block cta-hero btn-atomic-tangerine" type="submit">
 						Envoyer
