--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
 	<meta name="robots" content="index,follow" />
 	<!--Balise canonical-->
 	<link rel="canonical" href="https://chascd.github.io/lapanthere/contact.html">
-
+	
 	<link rel="shortcut icon" type="image/png" href="favicon.jpg">
     
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
@@ -91,20 +91,19 @@
 			<div class="col-sm-6">
 				<form id="form_1" novalidate success-msg="Your message has been sent." fail-msg="Sorry it seems that our mail server is not responding, Sorry for the inconvenience!">
 					<div class="form-group">
-						<input id="name" class="form-control" required >
 						<label for="Nom">Nom et Prénom</label>
+						<input id="Nom" class="form-control" required >
 					</div>
 					<div class="form-group">
-						<input id="email" class="form-control" type="email" required >
 						<label for="Adresse email">Adresse Mail</label>
+						<input id="Adresse email" class="form-control" type="email" required >
 					</div>
 					<div class="form-group">
-						<input class="form-control" type="email" required id="input_504" >
 						<label for="Comment avez vous connu notre site ?">Comment avez vous connu notre site ?</label>
+						<input class="form-control" type="email" required id="Comment avez vous connu notre site ?" >
 					</div>
 					<div class="form-group">
-						<textarea id="message" class="form-control" rows="4" cols="50" required></textarea>
-						<label for="Brief de votre projet (Ajoutez autant de détails que nécessaire)">Brief de votre projet (Ajoutez autant de détails que nécessaire)</label>
+						<label for="Brief de votre projet (Ajoutez autant de détails que nécessaire)">Brief de votre projet (Ajoutez autant de détails que nécessaire)</label><br><textarea id="Brief de votre projet (Ajoutez autant de détails que nécessaire)" class="form-control" rows="4" cols="50" required></textarea>
 					</div> 
 					<button class="bloc-button btn btn-lg btn-block cta-hero btn-atomic-tangerine" type="submit">
 						Envoyer
