--- a/contact.html
+++ b/contact.html
@@ -89,21 +89,21 @@
 	<div class="container bloc-lg">
 		<div class="row">
 			<div class="col-sm-6">
-				<form id="form_1" novalidate success-msg="Your message has been sent." fail-msg="Sorry it seems that our mail server is not responding, Sorry for the inconvenience!">
+				<form id="form_1" novalidate data-success-msg="Your message has been sent." data-fail-msg="Sorry it seems that our mail server is not responding, Sorry for the inconvenience!">
 					<div class="form-group">
 						<label for="Nom">Nom et Prénom</label>
 						<input id="Nom" class="form-control" required >
 					</div>
 					<div class="form-group">
-						<label for="Adresse email">Adresse Mail</label>
-						<input id="Adresse email" class="form-control" type="email" required >
+						<label for="description">Comment avez vous connu notre site ?</label>
+						<input id="description" class="form-control" required >
 					</div>
 					<div class="form-group">
-						<label for="Comment avez vous connu notre site ?">Comment avez vous connu notre site ?</label>
-						<input class="form-control" type="email" required id="Comment avez vous connu notre site ?" >
+						<label for="email">Adresse Mail</label>
+						<input class="form-control" type="email" required id="email" >
 					</div>
 					<div class="form-group">
-						<label for="Brief de votre projet (Ajoutez autant de détails que nécessaire)">Brief de votre projet (Ajoutez autant de détails que nécessaire)</label><br><textarea id="Brief de votre projet (Ajoutez autant de détails que nécessaire)" class="form-control" rows="4" cols="50" required></textarea>
+						<label for="Brief">Brief de votre projet (Ajoutez autant de détails que nécessaire)</label><br><textarea id="Brief" class="form-control" rows="4" cols="50" required></textarea>
 					</div> 
 					<button class="bloc-button btn btn-lg btn-block cta-hero btn-atomic-tangerine" type="submit">
 						Envoyer
@@ -136,25 +136,25 @@
 				<div class="row row-no-gutters social">
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" aria-label="Lien vers Twitter" href="https://twitter.com/?lang=fr">
+							<a class="social" aria-label="Lien vers Twitter" href="https://twitter.com/?lang=fr"></a>
 								<i class="fa fa-twitter icon-md"></i>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" aria-label="Lien vers Facebook" href="https://www.facebook.com/">
+							<a class="social" aria-label="Lien vers Facebook" href="https://www.facebook.com/"></a>
 								<i class="fa fa-facebook icon-md"></i>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" aria-label="Lien vers Dribble" href="https://dribbble.com/">
+							<a class="social" aria-label="Lien vers Dribble" href="https://dribbble.com/"></a>
 								<i class="fa fa-dribbble icon-md"></i>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" aria-label="Lien vers Instagram" href="https://www.instagram.com/?hl=fr">
+							<a class="social" aria-label="Lien vers Instagram" href="https://www.instagram.com/?hl=fr"></a>
 								<i class="fa fa-instagram icon-md"></i>
 						</div>
 					</div>
